runtime/snapshots/custom-abstracts-basic_abstract-BasicAbstractMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
frame_stack:
  max_size: 256
  max_operand_stack_size: 256
  frames: []
jni_env:
  heap:
    objects:
      - address: 0
        type: Instance
        value:
          class: abstracts/basic_abstract/BasicAbstractMain$Cat
          fields: []
      - address: 1
        type: Instance
        value:
          class: abstracts/basic_abstract/BasicAbstractMain$Cat
          fields: []
      - address: 2
        type: String
        value: Meow
    string_pool:
      - string: Meow
        address: 2
last_pop_frame:
  locals:
    - ~
    - Object: 0
    - Object: 1
    - Object: 2
    - Object: 2
  operands: []
  pc: 28
