runtime/snapshots/custom-arrays-reference_array-ReferenceArrayMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
frame_stack:
  max_size: 256
  max_operand_stack_size: 256
  frames: []
vm:
  heap:
    objects:
      - address: 0
        type: Instance
        value:
          class: arrays/reference_array/ReferenceArrayMain$ReferenceClass
          fields:
            - Integer: 1
      - address: 1
        type: Instance
        value:
          class: arrays/reference_array/ReferenceArrayMain$ReferenceClass
          fields:
            - Integer: 2
      - address: 2
        type: Instance
        value:
          class: arrays/reference_array/ReferenceArrayMain$ReferenceClass
          fields:
            - Integer: 3
      - address: 3
        type: ArrayRef
        class: arrays/reference_array/ReferenceArrayMain$ReferenceClass
        elements:
          - Object: 0
          - Object: 1
          - Object: 2
    string_pool: []
last_pop_frame:
  locals:
    - ~
    - Object: 0
    - Object: 1
    - Object: 2
    - Array: 3
    - Integer: 3
  operands: []
  pc: 51
