runtime/snapshots/custom-classes-class_is_primitive-ClassIsPrimitiveMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
vm:
  heap:
    objects:
      - address: 0
        type: Array
        class: "[C"
        elements:
          - Integer: 105
          - Integer: 110
          - Integer: 116
      - address: 1
        type: Instance
        value:
          class: java/lang/String
          fields:
            - Array: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 2
        type: Array
        class: java/lang/Class
        elements: []
      - address: 3
        type: Array
        class: java/io/ObjectStreamField
        elements: []
      - address: 4
        type: Instance
        value:
          class: java/lang/Class
          fields:
            - Object: ~
            - Object: ~
            - Object: ~
            - Object: ~
            - Object: ~
            - Array: ~
            - Object: ~
            - Object: ~
            - Object: ~
            - Integer: 0
            - Object: ~
            - Array: ~
            - Object: ~
            - Object: ~
            - Object: ~
            - Object: ~
      - address: 5
        type: Array
        class: "[C"
        elements:
          - Integer: 48
          - Integer: 49
          - Integer: 50
          - Integer: 51
          - Integer: 52
          - Integer: 53
          - Integer: 54
          - Integer: 55
          - Integer: 56
          - Integer: 57
          - Integer: 97
          - Integer: 98
          - Integer: 99
          - Integer: 100
          - Integer: 101
          - Integer: 102
          - Integer: 103
          - Integer: 104
          - Integer: 105
          - Integer: 106
          - Integer: 107
          - Integer: 108
          - Integer: 109
          - Integer: 110
          - Integer: 111
          - Integer: 112
          - Integer: 113
          - Integer: 114
          - Integer: 115
          - Integer: 116
          - Integer: 117
          - Integer: 118
          - Integer: 119
          - Integer: 120
          - Integer: 121
          - Integer: 122
    string_pool:
      - string: int
        address: 1
last_pop_frame:
  locals:
    - ~
    - Object: 4
    - Integer: 1
  operands: []
  pc: 10
