runtime/snapshots/custom-classes-default_fields_values-InstanceDefaultValuesMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
frame_stack:
  max_size: 256
  max_operand_stack_size: 256
  frames: []
heap:
  objects:
    - type: Instance
      value:
        class: classes/default_fields_values/InstanceDefaultValuesMain$ClassWithFields
        fields:
          - Object: ~
          - Object: ~
          - Array: ~
          - Integer: 0
          - Integer: 0
          - Integer: 0
          - Integer: 0
          - Integer: 0
          - Long: 0
          - Float: 0
          - Double: 0
string_pool: []
last_pop_frame:
  locals:
    - ~
    - Object: 0
  operands: []
  pc: 9
