runtime/snapshots/custom-classes-get_class_name-GetClassNameMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
frame_stack:
  max_size: 256
  max_operand_stack_size: 256
  frames: []
vm:
  heap:
    objects:
      - address: 0
        type: ArrayPrimitive
        class: Char
        elements:
          - Integer: 104
          - Integer: 101
          - Integer: 108
          - Integer: 108
          - Integer: 111
          - Integer: 32
          - Integer: 119
          - Integer: 111
          - Integer: 114
          - Integer: 108
          - Integer: 100
      - address: 1
        type: Instance
        value:
          class: java/lang/String
          fields:
            - Array: 0
            - Integer: 0
            - Integer: 0
            - Integer: 0
      - address: 2
        type: Instance
        value:
          class: java/lang/Class
          fields:
            - Object: ~
            - Object: 4
            - Object: ~
            - Object: ~
            - Object: ~
            - Array: ~
            - Object: ~
            - Object: ~
            - Object: ~
            - Integer: 0
            - Object: ~
            - Array: ~
            - Object: ~
            - Object: ~
            - Object: ~
            - Object: ~
      - address: 3
        type: ArrayPrimitive
        class: Char
        elements:
          - Integer: 106
          - Integer: 97
          - Integer: 118
          - Integer: 97
          - Integer: 46
          - Integer: 108
          - Integer: 97
          - Integer: 110
          - Integer: 103
          - Integer: 46
          - Integer: 83
          - Integer: 116
          - Integer: 114
          - Integer: 105
          - Integer: 110
          - Integer: 103
      - address: 4
        type: Instance
        value:
          class: java/lang/String
          fields:
            - Array: 3
            - Integer: 0
            - Integer: 0
            - Integer: 0
    string_pool:
      - string: hello world
        address: 1
      - string: java.lang.String
        address: 4
last_pop_frame:
  locals:
    - ~
    - Object: 1
    - Object: 4
  operands: []
  pc: 12
