runtime/snapshots/custom-inheritance-invoke_parent_method-InvokeParentMethodMain.class.snap
---
source: runtime/src/lib.rs
expression: "&interpreter"
---
frame_stack:
  max_size: 256
  max_operand_stack_size: 256
  frames: []
vm:
  heap:
    objects:
      - address: 0
        type: Instance
        value:
          class: inheritance/invoke_parent_method/InvokeParentMethodMain$Child
          fields:
            - Integer: 42
    string_pool: []
last_pop_frame:
  locals:
    - ~
    - Object: 0
    - Integer: 42
  operands: []
  pc: 14
